feat: finish oauth flow
